--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <ng-go>
+    <myapp>
         initalize
-    </ng-go>
+    </myapp>
   </body>
 </html>
 
