--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <myapp>
+    <myapp class="home-template">
         initalize
     </myapp>
   </body>
