--- a/app/myapp.html
+++ b/app/myapp.html
@@ -1,4 +1,10 @@
-<div>
-    <config-component>
-    </config-component>
+<div class="container">
+    <div class= "row">
+        <mine-component class="col-md-8 main-content">
+            Loading mine component
+        </mine-component>
+        <config-component class="col-md-4 sidebar">
+            Loading config component
+        </config-component>
+    </div>
 </div>
