--- a/app/mine_component/mine.panel.html
+++ b/app/mine_component/mine.panel.html
@@ -3,9 +3,24 @@
         <tbody>
             <tr *ngFor="let row of cells">
                 <td *ngFor="let cell of row">
-                    <button type="button" class="btn btn-default" (click)="cellClick(cell.row, cell.column)"> </button>
+                    <button type="button"
+                            class="btn btn-default mine-cell"
+                            [class.disabled-cell]="cell.disabled"
+                            [disabled]="cell.disabled"
+                            (click)="cellClick(cell.row, cell.column)">
+                    </button>
                 </td>
             </tr>
         </tbody>
     </table>
+
 </div>
+<style>
+    .mine-cell {
+        height: 30px;
+        width: 30px;
+    }
+    .disabled-cell {
+        background-color: gray;
+    }
+</style>
