--- a/app/mine_component/mine.panel.html
+++ b/app/mine_component/mine.panel.html
@@ -8,12 +8,12 @@
                             [class.disabled-cell]="cell.disabled"
                             [disabled]="cell.disabled"
                             (click)="cellClick(cell.row, cell.column)">
+                        {{cell.text}}
                     </button>
                 </td>
             </tr>
         </tbody>
     </table>
-
 </div>
 <style>
     .mine-cell {
