Add mark mine methods

--- a/app/mine_component/mine.entry.html
+++ b/app/mine_component/mine.entry.html
@@ -1,4 +1,5 @@
 <div>
+    <div>Press "Ctrl" + mouse click to mark the mine</div>
     <mine-panel>
         loading mine panel...
     </mine-panel>
