--- a/app/mine_component/mine.panel.html
+++ b/app/mine_component/mine.panel.html
@@ -6,6 +6,7 @@
                     <button type="button"
                             class="btn btn-default mine-cell"
                             [class.disabled-cell]="cell.disabled"
+                            [class.marked-cell]="cell.marked"
                             [disabled]="cell.disabled"
                             (click)="cellClick($event, cell.row, cell.column)">
                         {{cell.text}}
@@ -22,5 +23,8 @@
     }
     .disabled-cell {
         background-color: gray;
+    }
+    .marked-cell {
+        background-color: green;
     }
 </style>
