Adding win method

--- a/app/mine_component/mine.entry.html
+++ b/app/mine_component/mine.entry.html
@@ -1,5 +1,6 @@
 <div>
     <div>Press "Ctrl" + mouse click to mark the mine</div>
+    <div class="warning">{{winLine}}</div>
     <mine-panel>
         loading mine panel...
     </mine-panel>
