--- a/app/mine_component/mine.panel.html
+++ b/app/mine_component/mine.panel.html
@@ -9,11 +9,11 @@
                     <button type="button"
                             class="btn btn-default mine-cell"
                             [class.disabled-cell]="cell.disabled"
-                            [class.marked-cell]="cell.marked"
                             [disabled]="cell.disabled || finished"
                             (click)="cellClick($event, cell.row, cell.column)">
                         {{cell.text}}
                         <img *ngIf="cell.marked" class="img-responsive" src="image/flag.png">
+                        <img *ngIf="cell.bombed" class="img-responsive" src="image/bomb.png">
                     </button>
                 </td>
             </tr>
@@ -28,8 +28,5 @@
     }
     .disabled-cell {
         background-color: gray;
-    }
-    .marked-cell {
-        background-color: green;
     }
 </style>
