--- a/app/myapp.html
+++ b/app/myapp.html
@@ -1,9 +1,12 @@
 <div class="container">
     <div class= "row">
-        <mine-component class="col-md-8 main-content">
+        <user-component class="col-md-3 sidebar">
+            Loading user component
+        </user-component>
+        <mine-component class="col-md-6 main-content">
             Loading mine component
         </mine-component>
-        <config-component class="col-md-4 sidebar">
+        <config-component class="col-md-3 sidebar">
             Loading config component
         </config-component>
     </div>
