--- a/app/myapp.html
+++ b/app/myapp.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <div class="row">
+        <header-component></header-component>
+    </div>
     <div class= "row">
         <user-component class="col-md-3 sidebar">
             Loading user component
