--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
         initalize
     </myapp>
   </body>
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDn_ar4lHVWJ1lTNgCtlvz1-38etTzWga8",
+      authDomain: "ngtest-1350.firebaseapp.com",
+      databaseURL: "https://ngtest-1350.firebaseio.com",
+      storageBucket: "ngtest-1350.appspot.com",
+    };
+    firebase.initializeApp(config);
+  </script>
 </html>
 
 
